0x08-recursion/4-pow_recursion.c:
n
w_recursion.c:23:1: error: control reaches end of non-void function [-Werror=return-type]
   23 | }
         | ^
